Public/css/style.css
@charset "UTF-8";
#buttons_shop {
  width: 27%;
  height: 16%;
  margin: -9% 0% 0% 6%;
}
@media screen and (max-width: 415px) {
  #buttons_shop {
    display: flex;
    margin: 332px 0% 0% 34%;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
  }
}

#button_shop_tenis {
  width: 44%;
  height: 45%;
  cursor: pointer;
  background: #02DFC9;
  border-radius: 6px;
  border-style: none;
  box-shadow: 0px 19px 37px -3px rgba(0, 0, 0, 0.25);
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 15px;
}
@media screen and (max-width: 415px) {
  #button_shop_tenis {
    width: 86%;
    height: 7%;
    margin-left: 1rem;
    position: absolute;
    background: #02DFC9;
    border-radius: 6px;
    border-style: none;
    box-shadow: 0px 19px 37px -3px rgba(0, 0, 0, 0.25);
    font-family: "DM Sans", sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 15px;
  }
}

#button_value {
  width: 29%;
  height: 45%;
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 15px;
}
@media screen and (max-width: 415px) {
  #button_value {
    width: 29%;
    height: 45%;
    font-family: "DM Sans", sans-serif;
    margin-top: -9rem;
    font-style: normal;
    font-weight: 600;
    font-size: 15px;
  }
}

.title_of_home_page {
  margin-left: -113%;
  margin-top: 18%;
  display: inline-block;
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 48px;
}
@media screen and (max-width: 415px) {
  .title_of_home_page {
    margin-left: 6%;
    margin-top: 82%;
    display: inline-block;
    font-family: "DM Sans", sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 48px;
  }
}

#description {
  margin-left: -113%;
  margin-top: 3%;
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
}
@media screen and (max-width: 415px) {
  #description {
    margin-left: 6%;
    margin-top: 3%;
    font-family: "DM Sans", sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
  }
}

/*ABOUT OF SITE AND SOME PRODUCTS*/
.some_product_and_information_about {
  width: 100%;
  height: 367vh;
}
@media screen and (max-width: 415px) {
  .some_product_and_information_about {
    margin-top: 117px;
  }
}

#first_products, #second_product {
  width: 100%;
  height: 20%;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: center;
}

.block_of_product {
  width: 22%;
  height: 76%;
  cursor: pointer;
  border-radius: 4%;
  background: white;
  box-shadow: 0px 7px 26px -10px #9b9b9b;
}

#image_inside_production_one {
  width: 100%;
  height: 68%;
  border-radius: 4%;
  background-image: url("../image/Produto_N_19/Mule Feminino Moleca Napa Turim Milano.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#image_inside_production_two {
  width: 100%;
  height: 68%;
  border-radius: 4%;
  background-image: url("../image/Produto_N_20/WhatsApp Image 2021-10-15 at 11.01.22 (1).jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#image_inside_production_three {
  width: 100%;
  height: 68%;
  border-radius: 4%;
  background-image: url("../image/Produto_N_16/Fila Float Fly.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#image_inside_production_four {
  width: 100%;
  height: 68%;
  border-radius: 4%;
  background-image: url("../image/Produto_N_17/Tênis Vans Old Skool Clássico.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#image_inside_production_five {
  width: 100%;
  height: 68%;
  border-radius: 4%;
  background-image: url("../image/Produto_N_18/3847_4b6d6667-3e9e-46e3-ae3c-9d5a73fa0505_700x600-f85c292ddaf2a1d24a15674415477277-1024-1024.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#image_inside_production_six {
  width: 100%;
  height: 68%;
  border-radius: 4%;
  background-image: url("../image/Produto_N_10/Branco_gelo.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#image_inside_production_five {
  width: 100%;
  height: 68%;
  border-radius: 4%;
  background-image: url("../image/Produto_N_11/Mizuno_azul.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#image_inside_production_seven {
  width: 100%;
  height: 68%;
  border-radius: 4%;
  background-image: url("../image/Produto_N_12/sandalia-moleca-tresse-roma-original-541931945-11-8e6ff39caa2f6dbef116337145152402-1024-1024.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#image_inside_production_eight {
  width: 100%;
  height: 68%;
  border-radius: 4%;
  background-image: url("../image/Produto_N_13/Tênis Infantil Molekinha Meia Corações Original.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.title_of_product {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  color: #000000;
  margin-left: 7%;
}

.value {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 15px;
  color: #00AD9C;
  margin-top: 6%;
  margin-left: 7%;
}

* {
  margin: 0;
  padding: 0;
}

@media screen and (max-width: 415px) {
  body {
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: space-around;
    align-items: center;
  }
}

header {
  width: 100%;
  height: 88vh;
}
header nav {
  width: 100%;
  height: 13%;
  list-style: none;
  display: flex;
  align-items: center;
  flex-wrap: nowrap;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;
}
@media screen and (max-width: 415px) {
  header nav {
    width: 100%;
    height: 10%;
    list-style: none;
    display: flex;
    align-items: center;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: center;
    align-content: center;
  }
}
header .icon_instagram {
  width: 40px;
  height: 40px;
  background-image: url(../icon/instagram.svg);
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  margin-left: -566%;
}
@media screen and (max-width: 415px) {
  header .icon_instagram {
    display: none;
  }
}
header li {
  margin: 0% 0% 0% 6%;
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 0.2em;
}
@media screen and (max-width: 415px) {
  header li {
    font-family: "DM Sans", sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    letter-spacing: 0.2em;
  }
}
header .image {
  width: 40%;
  height: 87%;
  background: url("../image/Produto_N_14/Moleca Knit (2).jpeg");
  margin: 0% 0% 0% 51%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
@media screen and (max-width: 415px) {
  header .image {
    width: 100%;
    height: 42%;
    margin: 0% 0% 0% 0%;
  }
}

/*iNFORMATION PAGE */
.information_the_page {
  width: 100%;
  height: 50%;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
}

#title_of_name_line_of_north {
  margin-top: -69%;
  display: inline-block;
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 48px;
  letter-spacing: 8px;
}
@media screen and (max-width: 415px) {
  #title_of_name_line_of_north {
    margin-top: -256%;
    text-align: center;
  }
}

#image_of_short_of_section {
  width: 81vh;
  height: 81vh;
  position: absolute;
  transform: rotate(221deg);
  background: url("../image/image_of_short/tenis-olympikus-easy-feminino-img-removebg-preview.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
@media screen and (max-width: 415px) {
  #image_of_short_of_section {
    display: none;
  }
}

#title_one {
  margin-left: 10%;
  margin-top: -167%;
  position: absolute;
}

#title_two {
  position: absolute;
  margin-top: -104%;
  margin-left: 15%;
}

#title_three {
  position: absolute;
  margin-top: -36%;
  margin-left: 20%;
}

#title_four {
  position: absolute;
  margin-top: 42%;
  margin-left: 20%;
}

.number {
  position: absolute;
  margin-left: -20%;
  color: #00AD9C;
  margin-left: -20%;
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 800;
  font-size: 25px;
  line-height: 16.2%;
}

.text {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 25px;
  color: rgba(0, 0, 0, 0.42);
  margin-top: -5%;
}

footer {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  height: 56vh;
  background: #02DFC9;
}
footer .title_of_footer {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  letter-spacing: 0.1em;
  cursor: pointer;
}
footer .description_of_footer {
  margin-top: 20px;
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
}
footer .block_of_footer {
  width: 22%;
  height: 88%;
  line-height: 33px;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-content: flex-start;
  align-items: flex-start;
}
footer .cart {
  cursor: pointer;
  width: 80%;
  height: 31%;
  margin: 39px 0px 0px 0px;
  background: url("../icon/BANCOS.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
footer a {
  text-decoration: none;
  color: black;
}
footer .Instagram {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.1em;
}
footer .Facebook {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.1em;
}
footer .Youtube {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.1em;
}
footer .Twitter {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.1em;
}
footer .troca {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.1em;
}
footer .entrega {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.1em;
}
footer .pagament {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.1em;
}
footer .cancelamento {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.1em;
}
footer .compra {
  font-family: "DM Sans", sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0.1em;
}

/*# sourceMappingURL=style.css.map */

